# libpam-x2go

./: .build.yml  .bzrignore  .gitignore  ChangeLog  Makefile.am  README  README.md  configure.ac
debian/: changelog  control  copyright  libpam-x2go-dev.install  libpam-x2go.install  rules  watch
include/: pam-x2go.h
m4/: gtest.m4
src/: Makefile.am  auth-check-path.c  auth-check-path.h  freerdp-auth-check.c  pam-freerdp-children.c  pam-freerdp-children.h  pam-freerdp.c  pam-x2go-children.c  pam-x2go-children.h  pam-x2go-private.h  pam-x2go.c  pam-x2go.h  x2go-auth-check.c
tests/: Makefile.am  mock_guest.c  mock_guest.h  mock_pam.c  mock_pam.h  test-freerdp-auth.c  test-freerdp-wrapper.cc  test-x2go-auth.c  test-x2go-wrapper.cc
